--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.3",
     "ng-select2": "^1.4.1",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "select2": "^4.1.0-rc.0",
     "sweetalert2": "^11.4.8",
