--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "select2": "^4.1.0-rc.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
